# ai-research-design-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml
docs/: project-structure.md  sprint-1-preparation.md  sprint-2-description.md
src/ai_research_design_assistant/: __init__.py  agent.py  cli.py  exporters.py  llm.py  memory.py  models.py  planning.py  templates.py  text.py  validation.py
tests/: test_sprint_2.py
